proxyvolumemonitor: Use GDBusProxy's name owner change notification

Some GVolumeMonitor users don't run mainloop thus we're not able
to do any async I/O. Using GDBusProxy name owner monitoring should
get us the same functionality as separate g_bus_watch_name() call
with the benefit of not doing any async I/O in GProxyVolumeMonitor
constructor. This way we could populate volume monitor objects
during initialization.

https://bugzilla.gnome.org/show_bug.cgi?id=679821